--- a/weather/pages/index/index.wxml
+++ b/weather/pages/index/index.wxml
@@ -1,7 +1,7 @@
 <!--index.wxml-->
 <view class="weather-wrapper">
-  <view class="temp">12°</view>
-  <view class="weather">晴天</view>
+  <view class="temp">{{nowTemp}}°</view>
+  <view class="weather">{{nowWeather}}</view>
   <image class="weather-bg" src="/images/sunny-bg.png" mode="scaleToFill"></image>
   <!--scaleToFill:不保持纵横比缩放图片，使图片的宽高完全拉伸至填满 image 元素-->
 </view>
