--- a/weather/pages/index/index.wxml
+++ b/weather/pages/index/index.wxml
@@ -2,6 +2,6 @@
 <view class="weather-wrapper">
   <view class="temp">{{nowTemp}}°</view>
   <view class="weather">{{nowWeather}}</view>
-  <image class="weather-bg" src="/images/sunny-bg.png" mode="scaleToFill"></image>
+  <image class="weather-bg" src="{{nowWeatherBackground}}" mode="scaleToFill"></image>
   <!--scaleToFill:不保持纵横比缩放图片，使图片的宽高完全拉伸至填满 image 元素-->
 </view>
