创建多个并列视图

--- a/weather/pages/index/index.wxml
+++ b/weather/pages/index/index.wxml
@@ -9,3 +9,5 @@
   <image class="timetips-icon" src="/images/time-icon.png"></image>
   <view class="timetips-text">未来24小时天气预报</view>
 </view>
+
+<view wx:for="{{[1,2,3,4,5]}}">{{item}}</view> 
