--- a/weather/pages/index/index.wxml
+++ b/weather/pages/index/index.wxml
@@ -10,4 +10,8 @@
   <view class="timetips-text">未来24小时天气预报</view>
 </view>
 
-<view wx:for="{{[1,2,3,4,5]}}">{{item}}</view> 
+<scroll-view scroll-x>
+    <view class='forecast-list'>
+         <view class="forecast-item" wx:for="{{forecast}}">{{item}}</view>
+    </view>
+</scroll-view>
