--- a/weather/pages/index/index.wxss
+++ b/weather/pages/index/index.wxss
@@ -31,6 +31,7 @@
   justify-content: center;
   align-items: center;
   margin-top: 40rpx;
+  margin-bottom: 45rpx;
 }
 .timetips-icon {
   margin-right: 10rpx;
@@ -41,4 +42,17 @@
   font-size: 30rpx;
   line-height: 42rpx;
   opacity: 0.5;
+}
+
+.forecast-list {
+    display:flex;
+}
+
+.forecast-item {
+    display:flex;
+    flex-direction: column;
+    flex-shrink: 0;
+    width: 120rpx;
+    font-size: 30rpx;
+    line-height: 42rpx;
 }
