丰富列表项元素

--- a/weather/pages/index/index.wxml
+++ b/weather/pages/index/index.wxml
@@ -11,7 +11,12 @@
 </view>
 
 <scroll-view scroll-x>
-    <view class='forecast-list'>
-         <view class="forecast-item" wx:for="{{forecast}}">{{item}}</view>
+  <view class='forecast-list'>
+    <view class="forecast-item" wx:for="{{forecast}}">
+      <view class='forecast-time'>{{item}}</view>
+      <image class='forecast-weather' src='/images/sunny-icon.png'>
+      </image>
+      <view class='forecast-temp'>{{item}}</view>
     </view>
+  </view>
 </scroll-view>
