--- a/weather/pages/index/index.wxml
+++ b/weather/pages/index/index.wxml
@@ -12,7 +12,7 @@
 
 <scroll-view scroll-x>
   <view class='forecast-list'>
-    <view class="forecast-item" wx:for="{{forecast}}">
+    <view class="forecast-item" wx:for="{{hourlyweather}}">
       <view class='forecast-time'>{{item.time}}</view>
       <image class='forecast-weather' src='{{item.iconPath}}'>
       </image>
