--- a/weather/pages/index/index.wxml
+++ b/weather/pages/index/index.wxml
@@ -4,7 +4,7 @@
   <view class="weather">{{nowWeather}}</view>
   <image class="weather-bg" src="{{nowWeatherBackground}}" mode="scaleToFill"></image>
   <!--scaleToFill:不保持纵横比缩放图片，使图片的宽高完全拉伸至填满 image 元素-->
-  <view class="day-weather">
+  <view class="day-weather" bindtap='onTapDayWeather'>
     <view class="day-text">{{todayDate}}</view>
     <view class="temp-text">{{todayTemp}}</view>
     <image class="arrow-icon" src='/images/arrow.png'></image>
