--- a/weather/pages/index/index.wxss
+++ b/weather/pages/index/index.wxss
@@ -11,11 +11,35 @@
    line-height: 56rpx;
    opacity: 0.65;
 }
-
+/*width 750rpx, height 760rpx 760=20+154+280+56+250*/
 .weather-wrapper {
   position: relative;
-  padding-top: 174rpx;
+  padding-top: 20rpx;
   padding-bottom: 250rpx;
+}
+
+.location-wrapper {
+  margin-bottom: 60rpx;
+  font-size: 30rpx;
+  line-height: 42rpx;
+  color: rgba(0, 0, 0, 0.5)
+}
+
+.location {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.location-icon {
+  margin-right: 10rpx;
+  width: 21rpx;
+  height: 30rpx;
+}
+
+.location-tips {
+  margin-top: 10rpx;
+  text-align: center;
 }
 
 .weather-bg {
