--- a/weather/pages/index/index.wxss
+++ b/weather/pages/index/index.wxss
@@ -1,17 +1,21 @@
 /**index.wxss**/
+
 .temp {
-   text-align: center;
-   font-size: 200rpx;
-   line-height: 280rpx;
-   opacity: 0.8;
+  text-align: center;
+  font-size: 200rpx;
+  line-height: 280rpx;
+  opacity: 0.8;
 }
+
 .weather {
   text-align: center;
-   font-size: 40rpx;
-   line-height: 56rpx;
-   opacity: 0.65;
+  font-size: 40rpx;
+  line-height: 56rpx;
+  opacity: 0.65;
 }
+
 /*width 750rpx, height 760rpx 760=20+154+280+56+250*/
+
 .weather-wrapper {
   position: relative;
   padding-top: 20rpx;
@@ -22,9 +26,9 @@
   margin-bottom: 60rpx;
   font-size: 30rpx;
   line-height: 42rpx;
-  color: rgba(0, 0, 0, 0.5)!important;
-  border: none!important;
-  padding: 0!important;
+  color: rgba(0, 0, 0, 0.5) !important;
+  border: none !important;
+  padding: 0 !important;
 }
 
 .location {
@@ -58,14 +62,14 @@
   display: flex;
   align-items: center;
   position: absolute;
-  bottom:0;
+  bottom: 0;
   left: 40rpx;
   right: 40rpx;
   height: 90rpx;
   border-top: 1px solid rgba(0, 0, 0, 0.1);
   font-size: 30rpx;
   line-height: 42rpx;
-  color: rgba(0, 0, 0, 0.5)
+  color: rgba(0, 0, 0, 0.5);
 }
 
 .temp-text {
@@ -73,6 +77,7 @@
   padding-right: 30rpx;
   text-align: right;
 }
+
 .arrow-icon {
   width: 13rpx;
   height: 24rpx;
@@ -85,11 +90,13 @@
   margin-top: 40rpx;
   margin-bottom: 45rpx;
 }
+
 .timetips-icon {
   margin-right: 10rpx;
   width: 36rpx;
   height: 28rpx;
 }
+
 .timetips-text {
   font-size: 30rpx;
   line-height: 42rpx;
@@ -97,15 +104,15 @@
 }
 
 .forecast-list {
-    display:flex;
+  display: flex;
 }
 
 .forecast-item {
-    display:flex;
-    flex-direction: column;
-    flex-shrink: 0;
-    width: 120rpx;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 0;
+  width: 120rpx;
+  align-items: center;
 }
 
 .forecast-time {
