--- a/weather/pages/list/list.wxss
+++ b/weather/pages/list/list.wxss
@@ -3,7 +3,7 @@
   align-items: center;
   height: 150rpx;
   margin: 0 40rpx;
-  border-bottom: 1rpx solid rgba(0, 0, 0, 0.1)
+  border-bottom: 1rpx solid rgba(0, 0, 0, 0.1);
 }
 
 .date-item:last-child {
@@ -29,7 +29,8 @@
   padding-right: 60rpx;
   opacity: 0.8;
 }
+
 .weather-icon {
-  width:90rpx;
+  width: 90rpx;
   height: 90rpx;
 }
